# vulpis

./: .gitignore  .gitmodules  .vulpis  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
engine/: lua.hpp  main.cpp
engine/components/core/: window.cpp  window.h
engine/components/input/: input.cpp  input.h
engine/components/layout/: layout.cpp  layout.h  yoga.cpp
engine/components/renderer/: commands.h  opengl_renderer.cpp  opengl_renderer.h
engine/components/state/: state.cpp  state.h
engine/components/system/: pathUtils.cpp  pathUtils.h
engine/components/text/: font.cpp  font.h
engine/components/ui/: ui.cpp  ui.h
engine/components/vdom/: vdom.cpp  vdom.h
lua/: app.lua
src/: main.cpp  ui.h
utils/core/: elements.lua
vulcli/: README.md  install.py  vulcli.bat  vulcli.py
